# jira-time-tracker

./: .gitignore  Makefile  README.md  pyproject.toml  pyrightconfig.json  requirements.txt
src/: config.py  configure.py  console.py
src/extract_teams/: README.md  main.py  period.py  teams_data.py  utils.py  validators.py
src/extract_teams/data/: magic-json.json  test_data.json  test_data_new.json
src/log_time/: configure.py  generate_hash.py  get_user_data.py  hash.py  jira.py  log_jira_time.py  main.py  mytypes.py  parse_user_data.py  save_generated_hash.py  user.py  user_data.py  utils.py  validate_user_data.py  work.py
tests/: conftest.py
tests/fixtures/: config_fixtures.py  input_fixtures.py  logs_fixtures.py  user_fixtures.py
tests/log_time/: test_hash.py  test_jira.py  test_user_data.py  test_utils.py
