[project]
name = "jira-time-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "prompt-toolkit>=3.0.51",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pytest-mock>=3.14.1",
    "readchar>=4.2.1",
    "requests>=2.32.3",
]
[tool.pytest.ini_options]
pythonpath = ["src"]