[project]
name = "jira-time-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "keyboard>=0.13.5",
    "prompt-toolkit>=3.0.51",
    "pyperclip>=1.9.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pytest-mock>=3.14.1",
    "python-box>=7.3.2",
    "readchar>=4.2.1",
    "requests>=2.32.3",
]
[tool.pytest.ini_options]
pythonpath = ["src"]
